--- a/memes/src/App.css
+++ b/memes/src/App.css
@@ -35,12 +35,12 @@ body {
   }
 }
 
-[title] {
+.tooltip[title] {
   position: relative;
   cursor: help;
 }
 
-[title]:hover::before {
+.tooltip[title]:hover::before {
   content: attr(title);
   position: absolute;
   bottom: calc(100% + 8px);
@@ -55,7 +55,7 @@ body {
   z-index: 1000;
 }
 
-[title]:hover::after {
+.tooltip[title]:hover::after {
   content: '';
   position: absolute;
   bottom: calc(100% + 2px);
