--- a/memes/src/components/Preview.css
+++ b/memes/src/components/Preview.css
@@ -6,35 +6,6 @@
   padding: 1em;
   position: relative;
   overflow: auto;
-  min-width: 360px;
-}
-
-.preview-area::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background:
-    linear-gradient(
-        45deg,
-        transparent 48%,
-        rgba(78, 52, 46, 0.1) 49%,
-        rgba(78, 52, 46, 0.1) 51%,
-        transparent 52%
-      )
-      0 0/2em 2em,
-    linear-gradient(
-        -45deg,
-        transparent 48%,
-        rgba(78, 52, 46, 0.1) 49%,
-        rgba(78, 52, 46, 0.1) 51%,
-        transparent 52%
-      )
-      0 0/2em 2em;
-  opacity: 0.3;
-  pointer-events: none;
 }
 
 .meme-container {
@@ -42,8 +13,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 360px;
-  height: 100%;
+  min-width: 400px;
+  min-height: 300px;
+  aspect-ratio: 16/9;
 }
 
 #meme-canvas,
@@ -52,10 +24,10 @@
 .stickers-container,
 .text-overlay {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 360px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  object-fit: contain;
 }
 
 #preview-canvas {
@@ -74,18 +46,21 @@
 
 .stickers-container {
   z-index: 3;
+  width: 100%;
+  height: 100%;
 }
 
 .text-overlay {
   pointer-events: none;
+  width: 100%;
+  height: 100%;
 }
 
 #backgroundGif {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   object-fit: contain;
   z-index: 0;
 }
@@ -209,7 +184,7 @@
 @media screen and (max-width: 600px) {
   .preview-area {
     height: calc(50vh - 19px);
-    width: 100%;
+    width: calc(50vh * (16 / 9));
     flex-shrink: 0;
     padding: 0.5em;
   }
